--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <b>STATUS: </b>
                 <span id="status"></span>
             </button>
-            <button class="btn btn-warning object_button">
-                <b>OBJECT: </b>
-                <span id="status"></span>
+            <button class="btn btn-warning result_button">
+                <b>RESULT: </b>
+                <span id="result"></span>
             </button>
         </center>
         
